[package]
name = "str_tools"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
license = "MIT"
keywords = ["string","shorthand" ,"traits","tools"]
description = "a utility that provides useful methods for manipulating the ends of strings"
readme = "readme.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
